--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "agent": "tsx src/cli/index.ts agent",
     "full": "tsx src/cli/index.ts full",
     "research": "tsx src/cli/research-cli.ts",
+    "test-titles": "tsx src/cli/titles-cli.ts",
+    "test-research-titles": "tsx scripts/test-research-titles.ts",
     "test-research": "tsx src/agents/article/nodes/test-research.ts",
     "test-search": "tsx src/agents/article/nodes/test-research.ts search",
     "test-search-mcp": "tsx src/agents/article/nodes/test-search.ts",
     "parse-articles": "tsx scripts/parse-articles.ts",
     "build-indices": "tsx scripts/build-indices.ts",
     "test-retrieval": "tsx scripts/test-retrieval.ts",
+    "test-image": "tsx scripts/test-image.ts",
+    "test-prompts": "tsx scripts/test-prompts.ts",
+    "test-prompts:quick": "tsx scripts/test-prompts-quick.ts",
+    "test-full-pipeline": "tsx scripts/test-full-image-pipeline.ts",
+    "test-interactive": "tsx scripts/test-interactive.ts",
     "test": "vitest",
     "test:unit": "vitest run tests/unit",
     "test:integration": "vitest run tests/integration",
