--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hello-world:build": "node dist/hello-world/graph.js",
     "agent": "tsx src/cli/index.ts agent",
     "full": "tsx src/cli/index.ts full",
+    "step": "tsx src/cli/step-cli.ts",
     "research": "tsx src/cli/research-cli.ts",
     "test-titles": "tsx src/cli/titles-cli.ts",
     "test-research-titles": "tsx scripts/test-research-titles.ts",
@@ -29,6 +30,7 @@
     "test-prompts:quick": "tsx scripts/test-prompts-quick.ts",
     "test-full-pipeline": "tsx scripts/test-full-image-pipeline.ts",
     "test-interactive": "tsx scripts/test-interactive.ts",
+    "test-html-flow": "tsx scripts/test-html-flow.ts",
     "test": "vitest",
     "test:unit": "vitest run tests/unit",
     "test:integration": "vitest run tests/integration",
@@ -47,6 +49,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@lancedb/lancedb": "^0.23.0",
     "@langchain/core": "^1.0.1",
     "@langchain/langgraph": "^1.0.7",
     "@langchain/langgraph-checkpoint-sqlite": "^1.0.0",
@@ -55,14 +58,18 @@
     "@llamaindex/huggingface": "^0.1.32",
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@mozilla/readability": "^0.5.0",
+    "apache-arrow": "^21.1.0",
     "axios": "^1.7.9",
     "chalk": "^5.4.1",
     "cheerio": "^1.0.0",
     "commander": "^13.1.0",
     "dotenv": "^17.2.3",
+    "form-data": "^4.0.5",
     "inquirer": "^12.4.1",
     "js-yaml": "^4.1.0",
+    "lancedb": "^0.0.1",
     "llamaindex": "^0.12.1",
+    "markdown-it": "^14.1.0",
     "openai": "^6.16.0",
     "ora": "^8.1.1",
     "playwright": "^1.49.1",
@@ -70,8 +77,10 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/form-data": "^2.2.1",
     "@types/inquirer": "^9.0.7",
     "@types/js-yaml": "^4.0.9",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.12.7",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
