修复重试逻辑、优化节点顺序

--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -180,7 +180,7 @@ models:
       api_key_env: DEEPSEEK_API_KEY
       params:
         max_tokens: 2048
-        temperature: 0.9  # 高创造性
+        temperature: 0.3  # 降低随机性，确保重生成时结果一致
       timeout: 60  # seconds
 
     # 图片提示词生成节点
