--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "step": "tsx src/cli/step-cli.ts",
     "research": "tsx src/cli/research-cli.ts",
     "test-titles": "tsx src/cli/test-titles.ts",
+    "test-titles:brief": "tsx scripts/test-titles.ts",
     "test-research-titles": "tsx scripts/test-research-titles.ts",
     "test-research": "tsx src/agents/article/nodes/test-research.ts",
     "test-search": "tsx src/agents/article/nodes/test-research.ts search",
