--- a/config/llm.yaml
+++ b/config/llm.yaml
@@ -7,6 +7,8 @@
 #   1. 全局默认配置 (models.default) - 所有节点的基础配置
 #   2. 节点特定配置 (models.nodes.*) - 覆盖默认配置
 #   3. Prompt 模板 (prompts.*) - 每个节点的提示词模板
+#   4. 可用模型列表 (available_models) - CLI 模型选择源
+#   5. Provider 配置 (providers) - Provider 级别配置
 #
 # 继承规则：
 #   - 节点配置会继承 default 的所有字段
@@ -22,6 +24,49 @@ credentials:
   # 环境变量前缀，实际值从环境变量读取
   # 例如：ANTHROPIC_API_KEY、OPENAI_API_KEY
   env_prefix: ""
+
+# -----------------------------------------------------------------------------
+# 可用模型列表（CLI 模型选择源）
+# -----------------------------------------------------------------------------
+# 定义所有可在 CLI 中选择的模型
+# 用户可以通过 select_model 节点选择其中一个模型用于所有 LLM 节点
+# -----------------------------------------------------------------------------
+available_models:
+  - id: deepseek-reasoner
+    name: "DeepSeek Reasoner (思考模型)"
+    provider: deepseek
+    model: deepseek-reasoner
+    base_url: https://api.deepseek.com
+
+  - id: doubao-ark-ep
+    name: "Doubao (ARK Endpoint)"
+    provider: doubao
+    model: ep-20260119101257-h4zwx
+    base_url: https://ark.cn-beijing.volces.com/api/v3
+
+  - id: deepseek-chat
+    name: "DeepSeek Chat (对话模型)"
+    provider: deepseek
+    model: deepseek-chat
+    base_url: https://api.deepseek.com
+
+# -----------------------------------------------------------------------------
+# Provider 配置
+# -----------------------------------------------------------------------------
+# 定义每个 provider 的默认配置
+# 这些配置会被 available_models 中的具体模型配置覆盖
+# -----------------------------------------------------------------------------
+providers:
+  deepseek:
+    api_key_env: DEEPSEEK_API_KEY
+    base_url: https://api.deepseek.com
+
+  doubao:
+    api_key_env: ARK_API_KEY
+    base_url: https://ark.cn-beijing.volces.com/api/v3
+    stream: true
+    thinking:
+      type: enabled
 
 # -----------------------------------------------------------------------------
 # 模型配置
@@ -306,35 +351,70 @@ prompts:
     - 润色后的文章（Markdown）
     - 修改说明
 
-  # 重写节点 Prompt（智性叙事）
-  rewrite: |
-    你是一个**跨界智性叙事者**，擅长用人文视角解构复杂技术。
+  # Rewrite 节点 - 活人感×深度分层×写作三维公式×HKR
+  rewrite_system: |
+    # Role: 真诚且专业的活人创作者 + 主编型结构工程师
 
-    请使用**智性四步法**重写以下文章：
-    1. 打破认知：指出看似合理但低效的现状
-    2. 通俗解构：用生活化比喻贯穿全文
-    3. 跨界升维：引用跨学科案例（文学/生物/历史/心理学/经济学）
-    4. 思维留白：总结思维模型，金句收尾
+    你用真实经历与主观波动建立信任（活人感），用研究与证据提供洞见（专家心态），用结构与认知舒适度让读者读完（低负荷+高奖励）。
 
-    质量要求（IPS 原则）：
-    - I (Intellectual): 反直觉洞察，提供智力愉悦感
-    - P (Polymath): 至少一个跨学科引用
-    - S (Simple): 核心比喻足够简单，中学生能懂
+    ## 核心原则（必须遵守）
 
-    格式约束：
-    - 禁止：列表符号、"首先/其次"、机械分点
-    - 字数：1500-2000 字
-    - 短段落保持呼吸感
-    - 关键洞察和金句用 **加粗** 标注
+    1. **活人感**：必须存在"我"的视角与情绪波动（好奇→震惊→后悔→释然…），并至少出现一次"我以为…结果…"
+    2. **专家心态**：研究与思考要超过 90% 读者；若证据不足，降低断言强度，用"我目前证据是…我更倾向于…"表达不确定性
+    3. **真诚与价值观**：可以不说，但绝不欺骗；不为流量违背常识；对边界与反例保持敬畏
+    4. **深度最低配**：至少写出 1 个"非显而易见的模式" + 1 个"根因" + 1 个"反直觉点/权衡代价"
+    5. **读者画像**：把读者当成"很聪明、很有钱、但很忙的人"——删废话、结构清晰、重点可扫读
 
-    待重写的文章：
-    {polished_content}
+    ## 内部写作流程（只在脑中执行，不要输出）
 
-    核心洞察：
-    {key_insights}
+    - 先走一遍 5 层深度骨架（≤12行量级）：Observation → Pattern → Root Cause（3-5层Why）→ Implications → Counter-intuitive
+    - 必要时启用第三层情绪：表层→第二层→最真实矛盾的一层
+    - 用 Uneven U：先抛不太抽象的判断→下潜到具体证据→再上升到解释与综合
 
-    推荐角度：
-    {recommended_angle}
+    ## 写作三维公式（必须同时照顾）
+
+    写作质量 = 信息传递 × 情感共鸣 × 认知舒适度
+
+    - 信息传递：术语就地解释；按"已知→未知"讲；不给读者回读成本
+    - 情感共鸣：至少包含一个反直觉洞见 / "我以为→结果" / 微幽默
+    - 认知舒适度：短段落（2-4句）；每 300-500 字给一个"可带走奖励"（洞见/例子/对比/方法/金句）
+
+    ## 输出要求（硬规则）
+
+    - **只输出最终正文**，不要写分析过程、不要解释写作方法
+    - 段落要短、有呼吸感；允许少量加粗句作为锚点（不超过 10 处）
+    - 避免显性编号与清单式推进（除非原文就这么写且必须保留）
+    - 默认字数：1500–2000
+    - **文末必须追加一个 HKR 尾标（用于程序解析，不要解释）**，格式固定为一行：
+      [[HKR]] H=<0-5> K=<0-5> R=<0-5> [[/HKR]]
+
+  rewrite_user: |
+    # 写作任务：活人感×深度分层重写（标题必须逐字保留）
+
+    【标题（必须逐字保留，不得改动）】
+    <<<TITLE
+    {title}
+    TITLE>>>
+
+    【待重写正文】
+    <<<DRAFT
+    {draft_content}
+    DRAFT>>>
+
+    【可选提示（按需吸收；为空则忽略）】
+    - 核心洞察：{key_insights}
+    - 推荐角度：{recommended_angle}
+    - 金句点缀：
+    {quotes}
+
+    【输出要求】
+    - 只输出最终正文（不要写分析过程）
+    - 标题必须逐字保留
+    - 保持短段落呼吸感；允许少量加粗句作为锚点
+    - 避免显性编号与清单式推进
+    - 默认字数：1500–2000
+    - 文末追加 HKR 尾标（不要解释），格式：
+      [[HKR]] H=<0-5> K=<0-5> R=<0-5> [[/HKR]]
 
   # 人化节点 Prompt（去机械化）
   humanize: |
