--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@llamaindex/huggingface": "^0.1.32",
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@mozilla/readability": "^0.5.0",
+    "@node-rs/jieba": "^2.0.1",
     "apache-arrow": "^21.1.0",
     "axios": "^1.7.9",
     "chalk": "^5.4.1",
